--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     row-gap: 30px;
     column-gap: 8px;
     margin-left: 5px;
+    /* overflow: hidden; */
 }
 @media (max-width: 900px) {
     .video-thumbnail{
@@ -20,6 +21,10 @@
 
 .main-img {
     width: 100%;
+}
+.main-img:hover{
+    transform: scale(1.2);
+    transition: transform 1s;
 }
 .info{
     display: grid;
